@@ -205,73 +205,6 @@ public class Document extends Element {
         return new Element(Tag.valueOf(tagName, ParseSettings.preserveCase), this.baseUri());
     }
 
-    /**
-     Normalise the document. This happens after the parse phase so generally does not need to be called.
-     Moves any text content that is not in the body element into the body.
-     @return this document after normalisation
-     @deprecated as normalization occurs during the HTML parse, this method is no longer useful and will be retired
-     in the next release.
-     */
-    @Deprecated
-    public Document normalise() {
-        Element htmlEl = htmlEl(); // these all create if not found
-        Element head = head();
-        body();
-
-        // pull text nodes out of root, html, and head els, and push into body. non-text nodes are already taken care
-        // of. do in inverse order to maintain text order.
-        normaliseTextNodes(head);
-        normaliseTextNodes(htmlEl);
-        normaliseTextNodes(this);
-
-        normaliseStructure("head", htmlEl);
-        normaliseStructure("body", htmlEl);
-        
-        ensureMetaCharsetElement();
-        
-        return this;
-    }
-
-    // does not recurse.
-    private void normaliseTextNodes(Element element) {
-        List<Node> toMove = new ArrayList<>();
-        for (Node node: element.childNodes) {
-            if (node instanceof TextNode) {
-                TextNode tn = (TextNode) node;
-                if (!tn.isBlank())
-                    toMove.add(tn);
-            }
-        }
-
-        for (int i = toMove.size()-1; i >= 0; i--) {
-            Node node = toMove.get(i);
-            element.removeChild(node);
-            body().prependChild(new TextNode(" "));
-            body().prependChild(node);
-        }
-    }
-
-    // merge multiple <head> or <body> contents into one, delete the remainder, and ensure they are owned by <html>
-    private void normaliseStructure(String tag, Element htmlEl) {
-        Elements elements = this.getElementsByTag(tag);
-        Element master = elements.first(); // will always be available as created above if not existent
-        if (elements.size() > 1) { // dupes, move contents to master
-            List<Node> toMove = new ArrayList<>();
-            for (int i = 1; i < elements.size(); i++) {
-                Node dupe = elements.get(i);
-                toMove.addAll(dupe.ensureChildNodes());
-                dupe.remove();
-            }
-
-            for (Node dupe : toMove)
-                master.appendChild(dupe);
-        }
-        // ensure parented by <html>
-        if (master.parent() != null && !master.parent().equals(htmlEl)) {
-            htmlEl.appendChild(master); // includes remove()            
-        }
-    }
-
     @Override
     public String outerHtml() {
         return super.html(); // no outer wrapper tag
